[package]
name = "grapple-config"
version = "0.1.2"
edition = "2021"
description = "Grapple Robotics' configuration structs and traits for use on embedded-hal projects"
documentation = "https://docs.rs/grapple-config"
repository = "https://github.com/GrappleRobotics/grapple-config"
readme = "README.md"
authors = ["Jaci Brunning"]
license = "MIT"

[features]
m24c64 = ["dep:grapple-m24c64"]

[dependencies]
embedded-hal = "0.2.7"
grapple-m24c64 = { version = "0.1.1", optional = true }
binmarshal = { version = "^0.1.1", default-features = false }